# evlog-fitness

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/: CODEOWNERS
src/evlog_fitness/: __init__.py
src/evlog_fitness/evlog/: __init__.py  dispensations.py  extraction.py  prescriptions.py  status_matrix.py
src/evlog_fitness/fitness/: __init__.py  fitness.py  petri_net.py  preparation.py
src/evlog_fitness/utils/: __init__.py
tests/: test_pipeline.py
