
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evlog-fitness"
version = "0.1.0"
description = "Treatment event-log construction and fitness (compliance with the guidelines) 
computation"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.md" }

authors = [
  { name = "I. Oscoz-Villanueva", email = "ignacio.oscoz.villanueva@navarra.es" }
]
maintainers = [
  { name = "I. Oscoz-Villanueva", email = "ignacio.oscoz.villanueva@navarra.es" }
]
dependencies = [
  "pandas>=1.4",
  "numpy>=1.23",
  "re>=2.2",
  "pm4py>=2.7",
  "tqdm>=4.65"
]

[project.urls]
Homepage = "https://github.com/metodologianavarrabiomed/evlog-fitness"
Issues   = "https://github.com/metodologianavarrabiomed/evlog-fitness/issues"
